--- a/5. project: Memory Game/css/app.css
+++ b/5. project: Memory Game/css/app.css
@@ -107,3 +107,53 @@ h1 {
     float: right;
     cursor: pointer;
 }
+
+/*
+ * Styles for Congratulations
+ */
+.overlay {
+    background: #000;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1000;
+    opacity: .5;
+}
+.visible {
+    background: #fff;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    margin-top: -200px;
+    overflow: hidden;
+    z-index: 2000;
+    width: 500px;
+    padding: 0px;
+    margin-left: -250px;
+}
+#win button {
+    width: 100%;
+    line-height: 20px;
+    margin: 0 auto;
+    border: none;
+    background: transparent;
+    color: blue;
+}
+#win button[type="button"]:hover {
+    cursor: pointer;
+    color: navy;
+    text-decoration: underline;
+}
+#win h3 {
+    text-align: center;
+    color: #555;
+}
+.content {
+    text-align: center;
+    padding: 0 1em;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    background: WhiteSmoke;
+}
